--- a/views/equipments_views.xml
+++ b/views/equipments_views.xml
@@ -7,35 +7,35 @@
             <field name="arch" type="xml">
                 <form string="Equipments">
                     <sheet>
-                        <div class="oe_button_box" name="button_operation_box">
+                        <div class="oe_button_box" name="button_equipments_box">
                             <button name="action_action" type="object"
                                     class="oe_stat_button"
-                                    icon="fa-dollar">
+                                    icon="fa-file-text-o">
                                 <div class="o_stat_info">
                                     <field name="order_line_count"/>
-                                    <span class="o_stat_text"># Order</span>
+                                    <span class="o_stat_text">Count</span>
                                 </div>
                             </button>
                             <button name="action_action" type="object"
                                     class="oe_stat_button"
-                                    icon="fa-dollar">
+                                    icon="fa-money">
                                 <div class="o_stat_info">
                                     <field name="currency_id" invisible="1"
                                            groups="base.group_multi_currency"/>
                                     <field name="order_line_cost" widget='monetary'
                                            options="{'currency_field': 'currency_id'}"/>
-                                    <span class="o_stat_text">Order Cost</span>
+                                    <span class="o_stat_text">Order Amount</span>
                                 </div>
                             </button>
                             <button name="action_action" type="object"
                                     class="oe_stat_button"
-                                    icon="fa-dollar">
+                                    icon="fa-money">
                                 <div class="o_stat_info">
                                     <field name="currency_id" invisible="1"
                                            groups="base.group_multi_currency"/>
                                     <field name="total_expense" widget='monetary'
                                            options="{'currency_field': 'currency_id'}"/>
-                                    <span class="o_stat_text">Actual Cost</span>
+                                    <span class="o_stat_text">Actual Amount</span>
                                 </div>
                             </button>
                         </div>
@@ -44,6 +44,7 @@
                                 <group>
                                     <field name="code"/>
                                     <field name="name"/>
+                                    <field name="type"/>
                                 </group>
                             </h3>
                         </div>
@@ -55,7 +56,6 @@
                             </group>
                             <group>
                                 <field name="buy_sell_price"/>
-                                <field name="type"/>
                                 <field name="category_id" readonly="1"/>
                                 <field name="product_id"/>
                                 <div>
@@ -72,13 +72,38 @@
                         </group>
                         <notebook>
                             <page name="farm_operation_olines" string="Order Line">
-
+                                <field name="operation_order_line_ids">
+                                    <tree>
+                                        <field name="sequence" widget="handle"/>
+                                        <field name="product_id" widget="selection"/>
+                                        <field name="name" widget="section_and_note_text"/>
+                                        <field name="categ_id" widget="selection" invisible="1"/>
+                                        <field name="price_unit" widget="monetary"/>
+                                        <field name="company_id" widget="selection" invisible="1"/>
+                                        <field name="currency_id" widget="selection" invisible="1"/>
+                                        <field name="product_uom"/>
+                                        <field name="qty"/>
+                                        <field name="note"/>
+                                        <field name="price_subtotal" sum="Total Cost"/>
+                                        <field name="equipments_id"/>
+                                        <field name="analytic_account_id"/>
+                                    </tree>
+                                </field>
                             </page>
-                            <page string="Actual Line">
-
-                            </page>
-                            <page string="Direct Expense">
-
+                            <page name="actual_move_line" string="Actual Line">
+                                <field name="operation_actual_line_ids">
+                                    <tree>
+                                        <field name="account_id"/>
+                                        <field name="analytic_account_id"/>
+                                        <field name="quantity" sum="Total Quantity"/>
+                                        <field name="debit" sum="Total Debit"/>
+                                        <field name="credit" sum="Total Credit"/>
+                                        <field name="credit"/>
+                                        <field name="date"/>
+                                        <field name="company_id" widget="selection" invisible="1"/>
+                                        <field name="currency_id" widget="selection" invisible="1"/>
+                                    </tree>
+                                </field>
                             </page>
                         </notebook>
                     </sheet>
