--- a/views/projects_views.xml
+++ b/views/projects_views.xml
@@ -368,11 +368,11 @@
                                 </group>
                                 <group>
                                     <div>
-                                        <field name="create_lock" invisible="1"/>
+                                        <field name="create_lock" invisible="0"/>
                                         <button name="create_project_product" type="object"
                                                 string="Create Product"
                                                 class="oe_highlight"
-                                        attrs="{'invisible':[('create_lock','!=', True)]}"/>
+                                        attrs="{'invisible':[('create_lock','=', True)]}"/>
                                     </div>
                                 </group>
                             </group>
